@@ -14,6 +14,7 @@ NEW FEATURES
 
 BUG FIXES
 - bug fixed concerning the use of gofstat with a chi squared df <=0 (error message blocking the other functions)
+- bug fix in mledist() when bounds were set (so not NULL) for censored MLE
 
 Version 1.0-9
 =============
